--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "themes/osuny-hugo-theme"]
 	path = themes/osuny-hugo-theme
 	url = git@github.com:noesya/osuny-hugo-theme.git
+	branch = refactor-sass
 [submodule "osuny-example"]
 	path = osuny-example
 	url = https://github.com/noesya/osuny-example
