--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,10 +1,1 @@
-baseURL: /
-theme: osuny-hugo-theme
-
-## LANGUAGE
-defaultContentLanguage: fr
-languageCode: fr
-
-## ADVANCED
-paginate: 18
-enableRobotsTXT: true
+theme: osuny-hugo-theme-aaa
