--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
       uses: peaceiris/actions-hugo@v2.6.0
       with:
         hugo-version: '0.111.3'
+        extended: true
     - name: build site
       run: hugo
     - name: deploy to s3
