--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -5,8 +5,9 @@ removePathAccents: true
 
 deployment:
   targets:
-    name: "scaleway.osuny.org"
-    URL: "s3://scaleway.osuny.org?endpoint=https://s3.fr-par.scw.cloud&region=fr-par"
+    name: scaleway.osuny.org
+    # URL: "s3://scaleway.osuny.org?endpoint=https://s3.fr-par.scw.cloud&region=fr-par"
+    URL: https://scaleway.osuny.org.s3.fr-par.scw.cloud
 
 params:
   breadcrumb:
