--- a/data/menus/fr/legal.yml
+++ b/data/menus/fr/legal.yml
@@ -5,16 +5,20 @@ items:
   target: "/mentions-legales/"
   kind: page
   children: []
-- title: Politique de confidentialité
-  target: "/politique-de-confidentialite/"
+- title: Conditions d'utilisation
+  target: "/conditions-d-utilisation/"
   kind: page
   children: []
-- title: Accessibilité
-  target: "/accessibilite/"
+- title: Politique de sobriété
+  target: "/politique-de-sobriete/"
   kind: page
   children: []
-- title: Plan du site
-  target: "/plan-du-site/"
+- title: Déclaration d'accessibilité
+  target: "/a11y/"
   kind: page
+  children: []
+- title: Licence MIT
+  target: https://gitlab.com/osuny/osuny/-/blob/main/LICENSE
+  kind: url
   children: []
 
