--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "themes/osuny-hugo-theme-aaa"]
-	path = themes/osuny-hugo-theme-aaa
-	url = git@github.com:noesya/osuny-hugo-theme-aaa.git
+[submodule "themes/osuny"]
+	path = themes/osuny
+	url = git@github.com:osunyorg/theme.git
 [submodule "themes/osuny-www-design-system"]
 	path = themes/osuny-www-design-system
 	url = git@github.com:noesya/osuny-www-design-system.git
